# promptmulti_ia_docker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  TP_PromptMulti_IA_Docker.docx  app.py  docker-build.sh  docker-compose.yml  env.example  main.py  pyproject.toml
src/domaine/: __init__.py
src/infrastructure/: __init__.py  claude_client.py  database.py  groq_client.py  openai_client.py
static/: .gitkeep  README.md
static/css/: styles.css
static/js/: app.js
templates/: index.html
test/: .gitkeep
