[project]
name = "promptingmulti_ia"
version = "1.0.0"
description = "Assistant vocal multi-IA avec support OpenAI, Claude et Groq"
authors = [
    {name = "Mamadou Bousso", email = "mamadou.bousso@example.com"}
]
dependencies = [
    "flask",
    "openai",
    "anthropic",
    "groq",
    "python-dotenv",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
